# tmdb-fullstack

./: .env.example  README.md  docker-compose.yml
tmdb-app/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  run.py
tmdb-app/src/: __init__.py  errors.py
tmdb-app/src/config/: config.py
tmdb-app/src/controllers/: auth.py  movie_controller.py  tmdb_controller.py  user_controller.py
tmdb-app/src/models/: movie.py  user.py
tmdb-app/src/routes/: routes.py
tmdb-front/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
tmdb-front/src/: App.tsx  index.css  vite-env.d.ts
tmdb-front/src/components/: index.ts
tmdb-front/src/components/MovieCard/: MovieCard.module.css  MovieCard.tsx
tmdb-front/src/components/MovieGrid/: MovieGrid.module.css
tmdb-front/src/components/PageHeader/: PageHeader.module.css
tmdb-front/src/components/Pagination/: Pagination.tsx
tmdb-front/src/components/SearchBar/: SearchBar.tsx
tmdb-front/src/components/StarRating/: StarRating.tsx
tmdb-front/src/context/: AuthContext.tsx
tmdb-front/src/pages/Home/: index.tsx
tmdb-front/src/pages/Login/: styles.module.css
tmdb-front/src/pages/MovieDetails/: index.tsx
tmdb-front/src/pages/RatedMovies/: index.tsx  styles.module.css
tmdb-front/src/routes/: index.tsx
tmdb-front/src/services/: api.ts  index.ts  movieService.ts  ratingService.ts  tmdbService.ts  userService.ts
tmdb-front/tmdb-front/: .env.example  Dockerfile  nginx.conf  package-lock.json
tmdb-front/tmdb-front/src/routes/: ProtectedRoute.tsx
(+16 files in other folders)
